--- a/language-exam/src/App.css
+++ b/language-exam/src/App.css
@@ -24,9 +24,9 @@ body {
 .project-name {
   font-family: "Lilita One", sans-serif;
   font-weight: 400;
-  font-size: 70px;
+  font-size: 80px;
   font-style: normal;
-
+  text-shadow: 2px 2px 10px rgba(180, 180, 180, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,5 +87,103 @@ button {
 }
 
 .start-button {
-  margin-top: 100px;
+  margin-top: 50px;
+}
+
+/* Responsive styles */
+
+/* iPhone and smaller screens */
+@media (max-width: 767px) {
+  .project-name {
+    font-size: 2rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .start-button,
+  .result-container,
+  .quiz-container {
+    width: 90%;
+    padding: 10px;
+    margin-top: 50px;
+  }
+
+  .button-bar {
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+  }
+
+  .timer,
+  .question-counter {
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .paper {
+    padding: 10px;
+    margin-top: 10px;
+  }
+}
+
+/* iPad (portrait and landscape) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .project-name {
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .start-button,
+  .result-container,
+  .quiz-container {
+    padding: 20px;
+  }
+
+  .button-bar {
+    flex-direction: row;
+  }
+
+  .timer,
+  .question-counter {
+    font-size: 1.2rem;
+    text-align: center;
+  }
+
+  .paper {
+    padding: 20px;
+  }
+}
+
+/* Larger screens */
+@media (min-width: 1025px) {
+  .project-name {
+    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .start-button,
+  .result-container,
+  .quiz-container {
+    padding: 30px;
+  }
+
+  .button-bar {
+    flex-direction: row;
+  }
+
+  .timer,
+  .question-counter {
+    font-size: 1.5rem;
+    text-align: left;
+  }
+
+  .paper {
+    padding: 30px;
+  }
 }
